[package]
name = "rindex"
version = "0.1.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/feinorgh/rindex"
license = "GPL-3.0"
license-file = "LICENSE"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
walkdir = "2"
